# cpp_interp_from_cmake

./: CMakeLists.txt  README.md  setup.py
src/: main.cpp
tests/: test.py
